--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"Copy",
 		"Print"
 	],
-	"license": "GPL-2.0-or-later",
+	"license": "LGPL-3.0-or-later",
 	"devDependencies": {
 		"electron": "^3.0.6",
 		"electron-builder": "^20.36.2"
