--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src"]
 	path = src
-	url = git@git.uni-paderborn.de:asta/blocs_copyclient.git
+	url = git@git.uni-paderborn.de:asta/copyclient_ng.git
