Fix building for Windows, also run build_angular before building

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
 			"main.js",
 			"package.json",
 			"index.html",
-			"includes"
+			"includes",
+			"web"
 		],
 		"mac": {
 			"target": "pkg",
