--- a/includes/config.js.template
+++ b/includes/config.js.template
@@ -1,11 +1,14 @@
 let _kiosk = false;
 let _kioskTimeoutMax = 180;
+let _startHidden = false;
 let _allowPrint = false;
 let _locale = "de";
 
 module.exports = {
 	backend: backend,
 	_kiosk: _kiosk,
+	_kioskTimeoutMax: _kioskTimeoutMax,
+	_startHidden: _startHidden,
 	_allowPrint: _allowPrint,
 	_locale: _locale
 }
