--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "asta-copyclient",
 	"productName": "AStA Copyclient",
-	"version": "0.2.4",
+	"version": "0.2.5",
 	"description": "Copyclient für das Drucksystem des AStA Copyservice",
 	"author": {
 		"name": "AStA der Universität Paderborn",
@@ -43,7 +43,7 @@
 	},
 	"dependencies": {
 		"chokidar": "^2.0.4",
-		"command-line-args": "^5.0.2",
+		"command-line-args": "^5.1.0",
 		"drag-drop": "^4.2.0",
 		"electron-better-dialog": "^1.0.6",
 		"jquery": "^3.3.1",
@@ -79,10 +79,7 @@
 		},
 		"linux": {
 			"target": [
-				"deb",
-				"rpm",
-				"pacman",
-				"tar.gz"
+				"deb"
 			],
 			"extraFiles": [
 				"fakeprinter/unix",
