Store printer options in .options file, encode everything with UUID. Now we just need to update blocs_copyclient to also, optionally, accept (bool) a3, (bool) color and (int) duplex.

--- a/package.json
+++ b/package.json
@@ -80,10 +80,7 @@
 		},
 		"linux": {
 			"target": [
-				"deb",
-				"rpm",
-				"pacman",
-				"tar.gz"
+				"deb"
 			],
 			"extraFiles": [
 				"fakeprinter/unix",
