--- a/package.json
+++ b/package.json
@@ -1,135 +1,139 @@
 {
-	"name": "asta-copyclient",
-	"productName": "AStA Copyclient",
-	"version": "0.3.7",
-	"description": "Copyclient für das Drucksystem des AStA Copyservice",
-	"author": {
-		"name": "AStA der Universität Paderborn",
-		"email": "it@asta.upb.de"
-	},
-	"contributors": [
-		{
-			"name": "Leon Tappe",
-			"email": "ltappe@mail.upb.de"
-		},
-		{
-			"name": "Michael Koch",
-			"email": "m.koch@emkay443.de"
-		}
-	],
-	"homepage": "https://asta.uni-paderborn.de/service/copyservice/",
-	"repository": {
-		"type": "git",
-		"url": "https://git.uni-paderborn.de/asta/copyclient_electron"
-	},
-	"bugs": {
-		"url": "https://git.uni-paderborn.de/asta/copyclient_electron/issues",
-		"email": "app@asta.upb.de"
-	},
-	"main": "main.js",
-	"scripts": {
-		"start": "./build_angular.sh && electron ."
-	},
-	"keywords": [
-		"AStA",
-		"Copyclient",
-		"Copy",
-		"Print"
-	],
-	"license": "LGPL-3.0-or-later",
-	"devDependencies": {
-		"electron": "^4.2.9",
-		"electron-builder": "^20.44.4"
-	},
-	"dependencies": {
-		"chokidar": "^2.1.6",
-		"command-line-args": "^5.1.1",
-		"drag-drop": "^4.2.0",
-		"electron-better-dialog": "^1.0.6",
-		"jquery": "^3.4.1",
-		"mousetrap": "^1.6.3",
-		"underscore": "^1.9.1"
-	},
-	"build": {
-		"appId": "de.upb.asta.copyclient",
-		"files": [
-			"node_modules/**/*",
-			"main.js",
-			"package.json",
-			"includes",
-			"web"
-		],
-		"mac": {
-			"target": "pkg",
-			"category": "public.app-category.productivity",
-			"icon": "includes/icons/asta.icns",
-			"extraFiles": [
-				"fakeprinter/unix"
-			],
-			"type": "distribution"
-		},
-		"pkg": {
-			"scripts": "fakeprinter/unix",
-			"allowCurrentUserHome": false
-		},
-		"win": {
-			"target": [
-				"portable"
-			],
-			"icon": "includes/icons/asta.ico"
-		},
-		"linux": {
-			"target": [
-				"deb"
-			],
-			"extraFiles": [
-				"fakeprinter/unix",
-				"README.TXT",
-				"asta-copyclient.desktop",
-				"asta.svg"
-			],
-			"category": "Office",
-			"icon": "includes/icons/linux"
-		},
-		"deb": {
-			"afterInstall": "fakeprinter/unix/install_printer.sh",
-			"afterRemove": "fakeprinter/unix/uninstall_printer.sh",
-			"depends": [
-				"gconf2",
-				"gconf-service",
-				"libnotify4",
-				"libappindicator1",
-				"libxtst6",
-				"libnss3",
-				"cups",
-				"cups-filters"
-			]
-		},
-		"pacman": {
-			"afterInstall": "fakeprinter/unix/install_printer.sh",
-			"afterRemove": "fakeprinter/unix/uninstall_printer.sh",
-			"depends": [
-				"libappindicator3",
-				"gconf",
-				"libnotify",
-				"libxtst",
-				"nss",
-				"cups",
-				"cups-filters"
-			]
-		},
-		"rpm": {
-			"afterInstall": "fakeprinter/unix/install_printer.sh",
-			"afterRemove": "fakeprinter/unix/uninstall_printer.sh",
-			"depends": [
-				"gconf2",
-				"libnotify4",
-				"libappindicator1",
-				"libXtst6",
-				"mozilla-nss",
-				"cups",
-				"cups-filters"
-			]
-		}
-	}
+  "name": "asta-copyclient",
+  "productName": "AStA Copyclient",
+  "version": "0.3.7",
+  "description": "Copyclient für das Drucksystem des AStA Copyservice",
+  "author": {
+    "name": "AStA der Universität Paderborn",
+    "email": "it@asta.upb.de"
+  },
+  "contributors": [
+    {
+      "name": "Leon Tappe",
+      "email": "ltappe@mail.upb.de"
+    },
+    {
+      "name": "Michael Koch",
+      "email": "m.koch@emkay443.de"
+    }
+  ],
+  "homepage": "https://asta.uni-paderborn.de/service/copyservice/",
+  "repository": {
+    "type": "git",
+    "url": "https://git.uni-paderborn.de/asta/copyclient_electron"
+  },
+  "bugs": {
+    "url": "https://git.uni-paderborn.de/asta/copyclient_electron/issues",
+    "email": "app@asta.upb.de"
+  },
+  "main": "main.js",
+  "scripts": {
+    "start": "./build_angular.sh && electron ."
+  },
+  "keywords": [
+    "AStA",
+    "Copyclient",
+    "Copy",
+    "Print"
+  ],
+  "license": "LGPL-3.0-or-later",
+  "devDependencies": {
+    "electron": "^4.2.9",
+    "electron-builder": "^20.44.4"
+  },
+  "dependencies": {
+    "chokidar": "^2.1.6",
+    "command-line-args": "^5.1.1",
+    "drag-drop": "^4.2.0",
+    "electron-better-dialog": "^1.0.6",
+    "jquery": "^3.4.1",
+    "mousetrap": "^1.6.3",
+    "underscore": "^1.9.1"
+  },
+  "build": {
+    "appId": "de.upb.asta.copyclient",
+    "files": [
+      "node_modules/**/*",
+      "main.js",
+      "package.json",
+      "includes",
+      "web"
+    ],
+    "mac": {
+      "target": "pkg",
+      "category": "public.app-category.productivity",
+      "icon": "includes/icons/asta.icns",
+      "extraFiles": [
+        "fakeprinter/unix"
+      ],
+      "type": "distribution"
+    },
+    "pkg": {
+      "scripts": "fakeprinter/unix",
+      "allowCurrentUserHome": false
+    },
+    "win": {
+      "target": [
+        "portable"
+      ],
+      "icon": "includes/icons/asta.ico"
+    },
+    "linux": {
+      "target": [
+        "deb",
+        "rpm",
+        "pacman",
+        "snap",
+        "tar.gz"
+      ],
+      "extraFiles": [
+        "fakeprinter/unix",
+        "README.TXT",
+        "asta-copyclient.desktop",
+        "asta.svg"
+      ],
+      "category": "Office",
+      "icon": "includes/icons/linux"
+    },
+    "deb": {
+      "afterInstall": "fakeprinter/unix/install_printer.sh",
+      "afterRemove": "fakeprinter/unix/uninstall_printer.sh",
+      "depends": [
+        "gconf2",
+        "gconf-service",
+        "libnotify4",
+        "libappindicator1",
+        "libxtst6",
+        "libnss3",
+        "cups",
+        "cups-filters"
+      ]
+    },
+    "pacman": {
+      "afterInstall": "fakeprinter/unix/install_printer.sh",
+      "afterRemove": "fakeprinter/unix/uninstall_printer.sh",
+      "depends": [
+        "libappindicator3",
+        "gconf",
+        "libnotify",
+        "libxtst",
+        "nss",
+        "cups",
+        "cups-filters"
+      ]
+    },
+    "rpm": {
+      "afterInstall": "fakeprinter/unix/install_printer.sh",
+      "afterRemove": "fakeprinter/unix/uninstall_printer.sh",
+      "depends": [
+        "gconf2",
+        "libnotify4",
+        "libappindicator1",
+        "libXtst6",
+        "mozilla-nss",
+        "cups",
+        "cups-filters"
+      ]
+    }
+  }
 }
