Electron needs these, they're not shipped with "minimal" installations

--- a/package.json
+++ b/package.json
@@ -106,6 +106,8 @@
 				"libappindicator1",
 				"libxtst6",
 				"libnss3",
+				"libxss1",
+				"libasound2",
 				"cups",
 				"cups-filters"
 			]
