Allow gitlab CI to run this thing from web

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ build:
     - tags
     - triggers
     - schedules
+    - web
   script:
     - apt update
     - curl -sL https://deb.nodesource.com/setup_13.x | bash -
