--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,9 @@ build:
     - web
   script:
     - apt update
+    - apt install -y apt-transport-https curl gnupg git-core rpm wine make
     - curl -sL https://deb.nodesource.com/setup_13.x | bash -
-    - apt install -y apt-transport-https curl gnupg git-core rpm wine nodejs make
+    - apt install -y nodejs
     - sh -c 'curl https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -'
     - sh -c 'curl https://storage.googleapis.com/download.dartlang.org/linux/debian/dart_unstable.list > /etc/apt/sources.list.d/dart_unstable.list'
     - apt update
