--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,8 @@ build:
     - npm install
     - mv $MAKEMK includes/make.mk
     - mv $CONFIGJS includes/config.js
+    - git submodule init
+    - git submodule update
     - make build-kiosk
   artifacts:
     paths:
