--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
     - web
   script:
     - apt update
-    - apt install -y apt-transport-https curl gnupg git rpm make jq sed binutils wine-stable nsis
+    - apt install -y apt-transport-https curl gnupg git rpm make jq sed binutils wine-stable nsis bsdtar
     - curl -sL https://deb.nodesource.com/setup_13.x | bash -
     - apt install -y nodejs
     - sh -c 'curl https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -'
