--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,11 @@ build:
     - export PATH="$PATH:/usr/lib/dart/bin"
     - pub global activate webdev
     - export PATH="$PATH":"$HOME/.pub-cache/bin"
-    - mv $MAKEMK includes/make.mk
-    - mv $CONFIGJS includes/config.js
+    - cp $MAKEMK includes/make.mk
+    - cp $CONFIGJS includes/config.js
+    - cp $IDRSA $HOME/.ssh/id_rsa
+    - cp $IDRSAPUB $HOME/.ssh/id_rsa.pub
+    - cp $KNOWNHOSTS $HOME/.ssh/known_hosts
     - git submodule init
     - git submodule update
     - npm install
