--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ build:
     - cp $KNOWNHOSTS $HOME/.ssh/known_hosts
     - git submodule init
     - git submodule update --force
+    - cp $MAKEMKNG src/make.mk
     - npm install
     - make build-kiosk
     - make build-directprint
